--- a/STMS.DbUtility/STMS.DbUtility.csproj
+++ b/STMS.DbUtility/STMS.DbUtility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3C63FA87-4344-44D3-A1C5-CF979BC96976}</ProjectGuid>
+    <ProjectGuid>{E5DDFDC1-40A1-4057-8AE3-0C757AD715AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Communicate</RootNamespace>
-    <AssemblyName>Communicate</AssemblyName>
+    <RootNamespace>STMS.DbUtility</RootNamespace>
+    <AssemblyName>STMS.DbUtility</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,12 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modbus\ModbusASCII.cs" />
-    <Compile Include="Modbus\ModbusBase.cs" />
-    <Compile Include="Modbus\ModbusRTU.cs" />
-    <Compile Include="Modbus\NetworkBase.cs" />
-    <Compile Include="Modbus\SerialPortBase.cs" />
+    <Compile Include="CommandInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
