--- a/STMS.Models/STMS.Models.csproj
+++ b/STMS.Models/STMS.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3C63FA87-4344-44D3-A1C5-CF979BC96976}</ProjectGuid>
+    <ProjectGuid>{A1908A78-CFBA-4386-8238-08A0E07A4A26}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Communicate</RootNamespace>
-    <AssemblyName>Communicate</AssemblyName>
+    <RootNamespace>STMS.Models</RootNamespace>
+    <AssemblyName>STMS.Models</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,12 +42,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modbus\ModbusASCII.cs" />
-    <Compile Include="Modbus\ModbusBase.cs" />
-    <Compile Include="Modbus\ModbusRTU.cs" />
-    <Compile Include="Modbus\NetworkBase.cs" />
-    <Compile Include="Modbus\SerialPortBase.cs" />
+    <Compile Include="DModels\ProductInfo.cs" />
+    <Compile Include="DModels\ProductInStoreRecordInfo.cs" />
+    <Compile Include="DModels\ProductStoreInfo.cs" />
+    <Compile Include="DModels\StoreInfo.cs" />
+    <Compile Include="DModels\StoreRegionInfo.cs" />
+    <Compile Include="DModels\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIModels\PageModel.cs" />
+    <Compile Include="UIModels\StoreRegionBoxModel.cs" />
+    <Compile Include="VModels\ViewProductStoreInfo.cs" />
+    <Compile Include="VModels\ViewSRegionTemperInfo.cs" />
+    <Compile Include="VModels\ViewStoreRegionInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{5944273a-e4b5-4f74-bafc-01ae39bceb8a}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
